2008-10-11  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_box):
	Let's return when detail is buttondefault, should fix Bug #555891.

2008-10-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c (murrine_draw_new_glossy_highlight),
	(murrine_draw_glow), (murrine_draw_glaze):
	* src/cairo-support.h:
	New glazestyle (5, let's test), declared some methods as static,
	removing them from the header file

2008-10-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c (murrine_rgb_to_hls), (murrine_hls_to_rgb),
	(murrine_shade), (murrine_mix_color), (murrine_gdk_color_to_rgb),
	(get_decreased_ratio), (get_increased_ratio):
	* src/murrine_draw.c (murrine_draw_inset), (murrine_draw_button),
	(murrine_draw_entry), (murrine_draw_spinbutton_down),
	(murrine_draw_scale_trough), (murrine_draw_progressbar_trough),
	(murrine_draw_progressbar_fill), (murrine_draw_optionmenu),
	(murrine_draw_menubar), (murrine_draw_toolbar),
	(murrine_draw_frame), (murrine_draw_tab), (murrine_draw_separator),
	(murrine_draw_combo_separator), (murrine_draw_list_view_header),
	(murrine_draw_menuitem), (murrine_draw_scrollbar_trough),
	(murrine_draw_scrollbar_stepper), (murrine_draw_scrollbar_slider),
	(murrine_draw_selected_cell), (murrine_draw_statusbar),
	(murrine_draw_menu_frame), (murrine_draw_tooltip),
	(murrine_draw_handle), (murrine_draw_normal_arrow),
	(murrine_draw_combo_arrow), (_murrine_draw_arrow),
	(murrine_draw_arrow), (murrine_draw_radiobutton),
	(murrine_draw_checkbox), (murrine_draw_resize_grip):
	* src/murrine_draw_rgba.c (murrine_draw_inset),
	(murrine_rgba_draw_button), (murrine_rgba_draw_entry),
	(murrine_rgba_draw_scale_trough),
	(murrine_rgba_draw_progressbar_trough),
	(murrine_rgba_draw_progressbar_fill), (murrine_rgba_draw_menubar),
	(murrine_rgba_draw_toolbar), (murrine_rgba_draw_frame),
	(murrine_rgba_draw_separator), (murrine_rgba_draw_tab),
	(murrine_rgba_draw_scrollbar_trough),